--- a/package.json
+++ b/package.json
@@ -8,14 +8,18 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.9",
+    "@react-navigation/native": "^5.1.6",
+    "@react-navigation/stack": "^5.2.11",
     "expo": "~37.0.3",
     "expo-updates": "~0.1.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "~0.61.5",
-    "react-native-gesture-handler": "~1.6.0",
-    "react-native-reanimated": "~1.7.0",
-    "react-native-screens": "~2.2.0",
+    "react-native-gesture-handler": "^1.6.1",
+    "react-native-reanimated": "^1.8.0",
+    "react-native-safe-area-context": "^0.7.3",
+    "react-native-screens": "^2.5.0",
     "react-native-unimodules": "~0.9.0",
     "react-native-web": "~0.11.7"
   },
@@ -23,6 +27,7 @@
     "@babel/core": "~7.9.0",
     "@types/react": "~16.9.23",
     "@types/react-native": "~0.61.23",
+    "babel-cli": "^6.26.0",
     "babel-preset-expo": "~8.1.0",
     "jest-expo": "~37.0.0",
     "typescript": "~3.8.3"
