--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,12 @@
     "lib": ["dom", "esnext"],
     "moduleResolution": "node",
     "noEmit": true,
+    "paths": {
+      "@data": ["data/*"],
+      "@assets": ["assets/*"],
+      "@app": ["app/*"],
+      "@services": ["services/*"]
+    },
     "skipLibCheck": true,
     "resolveJsonModule": true,
     "strict": true
