--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@react-navigation/native": "^5.1.6",
     "@react-navigation/stack": "^5.2.11",
     "expo": "~37.0.3",
+    "expo-font": "^8.1.1",
     "expo-updates": "~0.1.0",
+    "native-base": "2.13.8",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
-    "react-native": "~0.61.5",
+    "react-native": "^0.61.5",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^0.7.3",
