--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@babel/core": "~7.9.0",
     "@types/react": "~16.9.23",
     "@types/react-native": "~0.61.23",
+    "@types/react-navigation": "^2.13.10",
     "babel-cli": "^6.26.0",
     "babel-preset-expo": "~8.1.0",
     "jest-expo": "~37.0.0",
