--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-navigation/native": "^5.1.6",
     "@react-navigation/stack": "^5.2.11",
     "@types/react-redux": "^7.1.7",
+    "@welldone-software/why-did-you-render": "^4.1.3-alpha.0",
     "expo": "~37.0.3",
     "expo-font": "^8.1.1",
     "expo-updates": "~0.1.0",
