--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@react-navigation/stack": "^5.2.11",
     "@types/react-redux": "^7.1.7",
     "@welldone-software/why-did-you-render": "^4.1.3-alpha.0",
-    "expo": "~37.0.3",
+    "expo": "^37.0.8",
     "expo-font": "^8.1.1",
     "expo-updates": "~0.1.0",
     "moment": "^2.25.3",
