--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "native-base": "2.13.8",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
+    "react-icons": "^3.10.0",
     "react-moment": "^0.9.7",
     "react-native": "^0.61.5",
     "react-native-gesture-handler": "^1.6.1",
